# beuzebot

./: .gitignore  .travis.yml  Dockerfile  DockerfilePI3  Makefile  README.md  beuzebot.zsh  beuzebot_wifi.zsh
src/bb_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/bb_bringup/config/: joystick.yaml
src/bb_bringup/launch/: hardware.launch  remote_controll.launch  software.launch
src/bb_cartographer/: CMakeLists.txt  package.xml
src/bb_cartographer/config/: camera_2d.lua
src/bb_cartographer/launch/: bb_cartographer_camera_2D.launch  offline_map_creation.launch  offline_map_visualization.launch  record_bag.launch
src/bb_cartographer/rviz/: map_creation.rviz
src/bb_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/bb_control/config/: controllers.yaml
src/bb_control/include/bb_control/: bb_hw_interface.hpp
src/bb_control/launch/: control.launch  control_debug.launch
src/bb_control/src/: bb_hw_interface.cpp  bb_hw_main.cpp
src/bb_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/bb_description/launch/: display.launch  robot.launch
src/bb_description/rviz/: urdf.rviz
src/bb_description/urdf/: beuzebot.urdf
src/bb_pigpio/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/bb_pigpio/config/: bb_encoder.yaml
src/bb_pigpio/include/bb_pigpio/: encoder.hpp  shutdown_callback.hpp
src/bb_pigpio/launch/: bb_encoder.launch
src/bb_pigpio/src/: encoder.cpp  encoder_node.cpp  encoder_node_killer.cpp
src/bb_serial/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/bb_serial/config/: bb_serial.yaml
src/bb_serial/include/bb_serial/: serial.hpp
src/bb_serial/launch/: bb_serial.launch
src/bb_serial/src/: serial.cpp  serial_node.cpp
