<?xml version="1.0"?>
<package format="2">
  <name>bb_bringup</name>
  <version>0.0.0</version>
  <description>The bb_bringup package</description>

  <maintainer email="guillaume.beuzeboc@gmail.com">GuillaumeBeuzeboc</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bb_description</build_depend>
  <build_export_depend>bb_description</build_export_depend>
  <exec_depend>bb_description</exec_depend>

</package>
