<?xml version="1.0"?>
<package format="2">
  <name>bb_cartographer</name>
  <version>0.0.0</version>
  <description>The bb_cartographer package</description>

  <maintainer email="guillaume.beuzeboc@gmail.com">GuillaumeBeuzeboc</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cartographer_ros</build_depend>
  <build_depend>depthimage_to_laserscan</build_depend>
  <build_depend>openni2_launch</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>cartographer_ros</build_export_depend>
  <build_export_depend>depthimage_to_laserscan</build_export_depend>
  <build_export_depend>openni2_launch</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>openni2_launch</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
