<?xml version="1.0"?>
<package format="2">
  <name>bb_control</name>
  <version>0.0.0</version>
  <description>The bb_control package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="guillaume.beuzeboc@gmail.com">beuzeboc</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ros_control_boilerplate</build_depend>
  <build_depend>angles</build_depend>
  <build_export_depend>ros_control_boilerplate</build_export_depend>

  <exec_depend>ros_control_boilerplate</exec_depend>
  <exec_depend>angles</exec_depend>

</package>
