<?xml version="1.0"?>
<package format="2">
  <name>bb_control</name>
  <version>1.0.1</version>
  <description>The bb_control package</description>

  <maintainer email="guillaume.beuzeboc@gmail.com">GuillaumeBeuzeboc</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ros_control_boilerplate</build_depend>
  <build_depend>angles</build_depend>
  <build_export_depend>ros_control_boilerplate</build_export_depend>

  <exec_depend>ros_control_boilerplate</exec_depend>
  <exec_depend>angles</exec_depend>

</package>
