<?xml version="1.0"?>
<package format="2">
  <name>bb_description</name>
  <version>1.0.1</version>
  <description>The bb_description package</description>

  <maintainer email="guillaume.beuzeboc@gmail.com">GuillaumeBeuzeboc</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
