<?xml version="1.0"?>
<package>
  <name>bb_pigpio</name>
  <version>1.0.1</version>
  <description>The bb_pigpio package</description>

  <maintainer email="guillaume.beuzeboc@gmail.com">GuillaumeBeuzeboc</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
